--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@fontsource-variable/onest": "^5.2.11",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
@@ -38,6 +39,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-router": "^1.141.4",
     "@tanstack/react-start": "^1.141.5",
+    "@unpic/react": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
