--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@web3icons/react": "^4.1.7",
     "better-auth": "^1.4.7",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
